--- a/preview/index.html
+++ b/preview/index.html
@@ -3,9 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Form Preview</title>
+    <style>
+      body {
+        font-family: Helvetica, Arial, sans-serif;
+      }
+
+      section {
+        margin-top: 45px;
+        border-top: 1px solid #f1f1f1;
+      }
+
+      .container {
+        max-width: 400px;
+        margin: 20px auto;
+      }
+    </style>
   </head>
   <body>
-    <main id="root"></main>
+    <main id="root" class="container"></main>
     <script src="/assets/app.js" async></script>
   </body>
 </html>
